fix issues with modal and realign list component

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,6 @@
   html {
     width: 100%;
     height: 100%;
-    overflow-y: visible;
-    overflow-x: hidden;
     background-color: oklch(90.1% 0.076 70.697);
   }
 
